# PySideChessBoard

./: README.md  main.py  pyproject.toml
PySide6_ChessBoard/: arrow.py
PySide6_ChessBoard/pieces/: Attribution.txt
docs/: integration.md
documentation/: api.md  integration.md
pyside6_chessboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: main.py
src/PySide6_ChessBoard/: chessboard.py  piece.py  square.py
src/PySide6_ChessBoard/pieces/: Attribution.txt
src/pyside6_chessboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
widgets/: chessboard.py  piece.py  square.py
