[project]
name = "pyside6-chessboard"
version = "1.1.0"
description = "An extension for PySide6 that adds a chessboard"
readme = "README.md"
requires-python = ">=3.0"

dependencies = [
    "PySide6>=6.0",
    "chess>=1.10"
]

[tool.setuptools.package-data]
"PySide6_ChessBoard" = ["pieces/*.svg"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
